bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q1 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST]@2) as product, ENC_PT(first_value(label) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST]@3) as label]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label)))@0 ASC, product@1 ASC], preserve_partitioning=[false], sort_prefix=[AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label)))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))), product@1 as product], aggr=[first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST], first_value(label) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label@1))) as __common_expr_1, product@0 as product, label@1 as label]
        SortExec: expr=[AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label@1))) ASC], preserve_partitioning=[false]
          ProjectionExec: expr=[product@0 as product, label@1 as label]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1, value1@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1, value1@2]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1, value1@2]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1, value1@3]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product, object@3 as label], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/2000/01/rdf-schema#label>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/2000/01/rdf-schema#label> AND <http://www.w3.org/2000/01/rdf-schema#label> <= predicate_max@2, required_guarantees=[predicate in (<http://www.w3.org/2000/01/rdf-schema#label>)]
                    FilterExec: EBV(GT(ENC_TF(ENC_PT(value1@1)), 5:4:136))
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?value1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product, object@3 as value1], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1>)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> AND <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66> <= object_max@6, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66>), predicate in (<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3> <= object_max@6, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3>), predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967> <= object_max@6, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967>), predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>)]
