bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q1 (Optimized, String).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST]) AS product, ENC_PT(first_value(label) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST]) AS label
  Sort: AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST, fetch=10
    Aggregate: groupBy=[[__common_expr_1 AS AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))), product]], aggr=[[first_value(product) ORDER BY [__common_expr_1 AS AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST] AS first_value(product) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST], first_value(label) ORDER BY [__common_expr_1 AS AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST] AS first_value(label) ORDER BY [AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, product ASC NULLS FIRST]]]
      Projection: AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) AS __common_expr_1, product, label
        Sort: AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST
          BasicGraphPattern: projection=[product, label], filters=[EBV(GT(ENC_TF(ENC_PT(value1)), Union 4:4:136)) AS EBV(GT(ENC_TF(ENC_PT(value1)),ENC_TF(Struct({term_type:2,value:136,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:}))))]
            QuadPattern: triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label]
            QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66>]
            QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3>]
            QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967>]
            QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?value1]
