bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q10 (Execution Plan, Object ID).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(first_value(offer) ORDER BY [ENC_SORT(xsd:double(ENC_TF(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]@3) as offer, ENC_PT(first_value(price) ORDER BY [ENC_SORT(xsd:double(ENC_TF(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]@4) as price]
  SortExec: TopK(fetch=10), expr=[ENC_SORT(xsd:double(ENC_TF(STR(ENC_PT(price)))))@0 ASC, offer@1 ASC, price@2 ASC], preserve_partitioning=[false], sort_prefix=[ENC_SORT(xsd:double(ENC_TF(STR(ENC_PT(price)))))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as ENC_SORT(xsd:double(ENC_TF(STR(ENC_PT(price))))), offer@1 as offer, price@2 as price], aggr=[first_value(offer) ORDER BY [ENC_SORT(xsd:double(ENC_TF(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST], first_value(price) ORDER BY [ENC_SORT(xsd:double(ENC_TF(STR(ENC_PT(price))))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[ENC_SORT(xsd:double(ENC_TF(STR(ENC_PT(price@1))))) as __common_expr_1, offer@0 as offer, price@1 as price]
        SortExec: expr=[ENC_SORT(xsd:double(ENC_TF(STR(ENC_PT(price@1))))) ASC], preserve_partitioning=[false]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, price@1]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, price@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@1, vendor@0)], projection=[offer@0]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0), (vendor@1, vendor@1)], projection=[offer@0, vendor@1]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, vendor@2]
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296>], blank_node_mode=Variable
                      FilterExec: DynamicFilter [ offer@0 >= 25575 AND offer@0 <= 81867 AND offer@0 IN (SET) ([25575, 28569, 30744, 30943, 33046, 33323, 36016, 37758, 38474, 40273, 42685, 49978, 50120, 50533, 50721, 52994, 60439, 62653, 64881, 67356, 67566, 70178, 72280, 75065, 75113, 77092, 77401, 81837, 81867]) ]
                        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ offer@0 >= 25575 AND offer@0 <= 81867 AND offer@0 IN (SET) ([25575, 28569, 30744, 30943, 33046, 33323, 36016, 37758, 38474, 40273, 42685, 49978, 50120, 50533, 50721, 52994, 60439, 62653, 64881, 67356, 67566, 70178, 72280, 75065, 75113, 77092, 77401, 81837, 81867]) ]]
                    FilterExec: DynamicFilter [ offer@0 >= 25575 AND offer@0 <= 81867 AND vendor@1 >= 23228 AND vendor@1 <= 77111 AND hash_lookup ]
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://purl.org/dc/elements/1.1/publisher> ?vendor], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ offer@0 >= 25575 AND offer@0 <= 81867 AND vendor@1 >= 23228 AND vendor@1 <= 77111 AND hash_lookup ]]
                  FilterExec: DynamicFilter [ vendor@0 >= 23228 AND vendor@0 <= 77111 AND vendor@0 IN (SET) ([23228, 23228, 23228, 30891, 30891, 30891, 30891, 30891, 38318, 38318, 38318, 48009, 48009, 48009, 48009, 48009, 59738, 59738, 59738, 67188, 67188, 67872, 67872, 72759, 72759, 72759, 77111, 77111, 77111]) ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#US>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ vendor@0 >= 23228 AND vendor@0 <= 77111 AND vendor@0 IN (SET) ([23228, 23228, 23228, 30891, 30891, 30891, 30891, 30891, 38318, 38318, 38318, 48009, 48009, 48009, 48009, 48009, 59738, 59738, 59738, 67188, 67188, 67872, 67872, 72759, 72759, 72759, 77111, 77111, 77111]) ]]
                FilterExec: EBV(LEQ(ENC_TF(deliveryDays@1), 4:4:3)), projection=[offer@0]
                  FilterExec: DynamicFilter [ offer@0 >= 30943 AND offer@0 <= 72280 AND offer@0 IN (SET) ([30943, 33046, 33323, 36016, 37758, 60439, 62653, 64881, 70178, 72280]) ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> ?deliveryDays], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ offer@0 >= 30943 AND offer@0 <= 72280 AND offer@0 IN (SET) ([30943, 33046, 33323, 36016, 37758, 60439, 62653, 64881, 70178, 72280]) ]]
              FilterExec: DynamicFilter [ offer@0 >= 33046 AND offer@0 <= 62653 AND offer@0 IN (SET) ([33046, 36016, 60439, 62653]) ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ offer@0 >= 33046 AND offer@0 <= 62653 AND offer@0 IN (SET) ([33046, 36016, 60439, 62653]) ]]
            FilterExec: EBV(GT(ENC_TF(date@1), 5:{date_time_type:0,value:63349516800.000000000000000000,offset:})), projection=[offer@0]
              FilterExec: DynamicFilter [ offer@0 >= 33046 AND offer@0 <= 62653 AND offer@0 IN (SET) ([33046, 36016, 60439, 62653]) ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?date], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ offer@0 >= 33046 AND offer@0 <= 62653 AND offer@0 IN (SET) ([33046, 36016, 60439, 62653]) ]]
