bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q10 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[first_value(offer) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]@3 as offer, first_value(price) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]@4 as price]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price))))@0 ASC, offer@1 ASC, price@2 ASC], preserve_partitioning=[false], sort_prefix=[AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price))))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))), offer@1 as offer, price@2 as price], aggr=[first_value(offer) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST], first_value(price) ORDER BY [AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price)))) ASC NULLS FIRST, offer ASC NULLS FIRST, price ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price@1)))) as __common_expr_1, offer@0 as offer, price@1 as price]
        SortExec: expr=[AS_SORTABLE_BYTES(xsd:double(ENC_TF(STR(price@1)))) ASC], preserve_partitioning=[false]
          ProjectionExec: expr=[offer@0 as offer, price@2 as price]
            DecodeObjectIdsExec: projections=[decode(offer) as offer, deliveryDays, decode(price) as price, date]
              FilterExec: EBV(GT(ENC_TF(date@3), 5:{date_time_type:0,value:63349516800.000000000000000000,offset:})) AND EBV(LEQ(ENC_TF(deliveryDays@1), 4:4:3))
                DecodeObjectIdsExec: projections=[offer, decode(deliveryDays) as deliveryDays, price, decode(date) as date]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0), (vendor@1, vendor@1)], projection=[offer@0, deliveryDays@2, price@3, date@4]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, vendor@1, deliveryDays@2, price@3, date@5]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, vendor@1, deliveryDays@2, price@4]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, vendor@1, deliveryDays@3]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendor@1, vendor@0)], projection=[offer@0, vendor@1]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@0, offer@0)], projection=[offer@0, vendor@2]
                              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product296>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as offer], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23401 AND object@3 = 17243, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23401 AND 23401 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 17243 AND 17243 <= object_max@6, required_guarantees=[object in (17243), predicate in (23401)]
                              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendor], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as offer, object@3 as vendor], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23402 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23402 AND 23402 <= predicate_max@2, required_guarantees=[predicate in (23402)]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendor <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> <http://downlode.org/rdf/iso-3166/countries#US>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as vendor], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14903 AND object@3 = 15597 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14903 AND 14903 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 15597 AND 15597 <= object_max@6, required_guarantees=[object in (15597), predicate in (14903)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> ?deliveryDays], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as offer, object@3 as deliveryDays], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23406 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23406 AND 23406 <= predicate_max@2, required_guarantees=[predicate in (23406)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as offer, object@3 as price], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23403 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23403 AND 23403 <= predicate_max@2, required_guarantees=[predicate in (23403)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?date], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as offer, object@3 as date], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 23405 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 23405 AND 23405 <= predicate_max@2, required_guarantees=[predicate in (23405)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?offer <http://purl.org/dc/elements/1.1/publisher> ?vendor], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as offer, object@3 as vendor], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1612 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1612 AND 1612 <= predicate_max@2, required_guarantees=[predicate in (1612)]
